# ChangeLog for sci-astronomy/healpix_cxx
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*healpix_cxx-3.11 (16 Jun 2013)

  16 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> +healpix_cxx-3.11.ebuild,
  +metadata.xml:
  sci-astronomy/healpix_cxx: Initial import