@@ -1,1 +1,1 @@
-DIST Healpix_3.11_2013Apr24.tar.gz 24256278 SHA256 f80aa3633601664afe99c8b7dc7253828f22e6d832187ab46ac90b2ad83e6831 SHA512 aae5592dda40103918a6c6520863e2aeddf40a34531e4ce2f38a1ce7411731218d7e20bd02107f92384a7b371c2415ed640ad27aa398f64857f5ed7d9dba32bb WHIRLPOOL 1e3f0588502b6b9e68c19de9763ae775d01031cd7a3120bb663a71bae1fa7e2baf6ac4997ff07598ca45e610ae919839ecf04c66a201256665f5e5f1727f7299
+DIST healpix_cxx-3.11.2.tar.gz 474320 SHA256 0e36478d82be566e85524c3be15890e1374afb4d83c98eae35bc426b06d1db8d SHA512 61e3183373940386e52d272b53df91278cf8bfaad8c89c0c2246708c69f7154697437593ac6fca06c9c3f42068a1f2be47bff3ba18736527a8fd53215bbadd9a WHIRLPOOL 51ec31f92f8ac9bde061d54c9568e14c6c2ac7fc73db3939ac8800cebd112116cb20aa37c30885c5577e5adeec1092a448218d27c6c1a9c9ff06d546faca5f53
