@@ -7,12 +7,11 @@ EAPI=5
 AUTOTOOLS_AUTORECONF=1
 inherit autotools-utils toolchain-funcs
 
-MYP="Healpix_${PV}"
-MYPP="2013Apr24"
+MYP="Healpix_3.11"
 
 DESCRIPTION="Hierarchical Equal Area isoLatitude Pixelization of a sphere - C++"
 HOMEPAGE="http://healpix.sourceforge.net/"
-SRC_URI="mirror://sourceforge/${PN}/${MYP}/${MYP}_${MYPP}.tar.gz"
+SRC_URI="mirror://sourceforge/healpix/${MYP}/autotools_packages/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -25,13 +24,9 @@ RDEPEND="
 DEPEND="${RDEPEND}
 	virtual/pkgconfig"
 
-S="${WORKDIR}/${MYP}/src/cxx/autotools"
-
-DOCS=( ../CHANGES ../../../READ_Copyrights_Licenses.txt )
-
 pkg_setup() {
-	if use openmp; then
-		if [[ $(tc-getCXX)$ == *g++* ]] && ! tc-has-openmp; then
+	if use openmp && [[ $(tc-getCXX)$ == *g++* ]]; then
+		if ! tc-has-openmp; then
 			ewarn "You are using a g++ without OpenMP capabilities"
 			die "Need an OpenMP capable compiler"
 		fi
@@ -39,9 +34,8 @@ pkg_setup() {
 }
 
 src_prepare() {
-	# respect user flags
-	sed -i -e '/^AX_CHECK_COMPILE_FLAG/d' configure.ac || die
 	# why was static-libtool-libs forced?
+	# it screws up as-neeeded
 	use static-libs || sed -i -e '/-static-libtool-libs/d' Makefile.am
 	autotools-utils_src_prepare
 }
